# cad_brep_euler

./: .clang-format  .clangd  CMakeLists.txt  README.md
cmake/: FindLibIGL.cmake  FindVectorClass2.cmake
include/: b-rep.hpp  render.hpp
include/b-rep/: operations.hpp  structures.hpp
include/render/: operations.hpp  render.hpp  structures.hpp
src/: CMakeLists.txt  main.cpp
src/b-rep/: operations.cpp
src/render/: operations.cpp  render.cpp
